--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
 
-    <section class="grid-test">
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">col 1 of 2</div>
         <div class="col-1-of-2">col 1 of 2</div>
@@ -48,12 +48,18 @@
       <div class="row">
         <div class="col-1-of-4">col 1 of 4</div>
         <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">col 1 of 4</div>
+        <div class="col-1-of-4">col 1 of 4</div>
         <div class="col-2-of-4">col 2 of 4</div>
       </div>
       <div class="row">
         <div class="col-1-of-4">col 1 of 4</div>
         <div class="col-3-of-4">col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
