--- a/index.html
+++ b/index.html
@@ -373,6 +373,50 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box u-margin-bottom-big">
+        <img
+          src="/img/logo-green-2x.png"
+          alt="full logo"
+          class="footer__logo"
+        />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Carrers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            Built by <a href="#" class="footer__link">Sarah Alazzeh</a> for me
+            to learn SASS. Copyright &copy; You are 100% allowed to use this
+            webpage for both personal and commercial use, but NOT to claim it as
+            your own design. A credit to the original author,
+            <a href="#" class="footer__link"> Jonas Schmedtmann</a>, is of
+            course highly appreciated!
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">col 1 of 2</div>
