--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
-            Exciting tours for adventuorous people
+            Exciting tours for adventurous people
           </h2>
         </div>
 
@@ -98,6 +98,28 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width:37.5rem) 30vw, 300px "
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+                src="img/nat-1-large.jpg"
+              />
+              <img
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width:37.5rem) 30vw, 300px "
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+                src="img/nat-2-large.jpg"
+              />
+              <img
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                sizes="(max-width: 56.25em) 20vw, (max-width:37.5rem) 30vw, 300px "
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+                src="img/nat-3-large.jpg"
+              />
+
+              <!-- <img
                 src="img/nat-1-large.jpg"
                 alt="photo 1"
                 class="composition__photo composition__photo--p1"
@@ -111,7 +133,7 @@
                 src="img/nat-3-large.jpg"
                 alt="photo 3"
                 class="composition__photo composition__photo--p3"
-              />
+              /> -->
             </div>
           </div>
         </div>
@@ -411,11 +433,20 @@
 
     <footer class="footer">
       <div class="footer__logo-box u-margin-bottom-big">
-        <img
-          src="/img/logo-green-2x.png"
-          alt="full logo"
-          class="footer__logo"
-        />
+        <picture class="footer__logo">
+          <source
+            srcset="
+              /img/logo-green-small-1x.png 1x,
+              /img/logo-green-small-2x.png 2x
+            "
+            media="(max-width: 37.5rem)"
+          />
+          <img
+            srcset="/img/logo-green-1x.png 1x, /img/logo-green-2x.png 2x"
+            alt="full logo"
+            src="/img/logo-green-small-2x.png"
+          />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
@@ -457,6 +488,7 @@
       <div class="popup__content">
         <div class="popup__left">
           <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <!--  -->
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
         </div>
         <div class="popup__right">
